--- a/user/config/system.yaml
+++ b/user/config/system.yaml
@@ -18,7 +18,7 @@ home:
   alias: /home
   hide_in_urls: false
 pages:
-  theme: bones
+  theme: couchadou-theme
   order:
     by: default
     dir: asc
@@ -33,6 +33,7 @@ pages:
     markdown: true
     twig: false
   twig_first: false
+  never_cache_twig: false
   events:
     page: true
     twig: true
@@ -80,6 +81,7 @@ cache:
   prefix: g
   lifetime: 604800
   gzip: false
+  allow_webserver_gzip: false
   redis:
     socket: false
 twig:
